--- a/src/index.css
+++ b/src/index.css
@@ -6,8 +6,33 @@
 @tailwind components;
 @tailwind utilities;
 
+
+
+::-webkit-scrollbar {
+  width: 10px;
+}
+
+::-webkit-scrollbar-thumb {
+  border-radius: 10px;
+          border: 3px;
+          outline: whitesmoke;
+          padding: 5px;
+           background-clip: content-box;
+            background: linear-gradient(to right from rgb(169, 169, 169) to rgba(128, 128, 128, 0));
+}
+
+::-webkit-scrollbar-track {
+    background: linear-gradient(to bottom, from black,  black, to gray );
+            background-color: #000000;
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background: linear-gradient(to right, #5b5b5b, rgba(63, 63, 63, 0.711));
+}
+
 @layer base {
   html {
     font-family: 'Raleway', sans-serif;
   }
+  
 }
